.[2.0.0] - unreleased
[%collapsible]
====
[discrete]
=== Breaking Change

* https://github.com/serpro69/kotlin-faker/pull/219[#219] [core] Extract faker's providers into several submodules of their own

[discrete]
=== Added

* https://github.com/serpro69/kotlin-faker/issues/218[#218] [core] Allow creating custom fakers / generators

[discrete]
=== Fixed

* ...

[discrete]
=== Other

* ...

====

.[1.16.0] - 2024-02-12
[%collapsible]
====
[discrete]
=== Breaking Change

* https://github.com/serpro69/kotlin-faker/pull/214[#214] [core] Update `Faker#internet#domain` function which affects returned values
* https://github.com/serpro69/kotlin-faker/pull/213[#213] [core] Add support for unique data generation to `Faker#random`

[discrete]
=== Added

* https://github.com/serpro69/kotlin-faker/pull/215[#215] [core] Add IPv4, IPv6 and MAC address generation to `Internet`
** `iPv4Address()`
** `publicIPv4Address()`
** `privateIPv4Address()`
** `iPv6Address()`
** `macAddress()`
* https://github.com/serpro69/kotlin-faker/pull/214[#214] [core] Update dictionary files, including:
** Data and functions in existing data providers
** `Faker().internet.domain()` now takes optional argument and produces a "safe-domain" (ending with `.example` or `.test`)
** Updates to existing localized dictionaries + one new locale
* https://github.com/serpro69/kotlin-faker/issues/208[#208] [core] Allow `StringProvider#regexify` to take Regex as input
* https://github.com/serpro69/kotlin-faker/pull/202[#202] [core] Allow `randomClassInstance` to directly use predefined generators

++++
<details><summary><h3>New Data Providers</h3></summary>
<p>
++++
* `smashing_pumpkins`
* `the_room`
++++
</p>
</details>
++++

++++
<details><summary><h3>New Locales</h3></summary>
<p>
++++
* `en-KE`
++++
</p>
</details>
++++

[discrete]
=== Fixed

* https://github.com/serpro69/kotlin-faker/pull/205[#205] [core] Fix `Person.birthDate` range error during leap year