@@ -27,6 +27,12 @@ contributors:
   link: https://github.com/Rafal-Spryszynski-Allegro
 - name: João Moreira
   link: https://github.com/JoaoSouMoreira
+- name: Nicklas Ansman
+  link: https://github.com/ansman
+- name: Eric Fenderbosch
+  link: https://github.com/efenderbosch-atg
+- name: Mathieu Boisnard
+  link: https://github.com/mboisnard
 
 homepageSections:
   - title: '…a plethora of real-looking data in various domains:'
